@@ -1,5 +1,7 @@
 *SVN*
 
+* Added "synchronous_connect" setting to try and work around SFTP hangs for certain users [Jamis Buck]
+
 * Auto-require the SSH shell service, to avoid race conditions [Jamis Buck]
 
 * Add a millisecond sleep in upload to reduce CPU impact [Jamis Buck]
